--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btnBmi"
-        android:layout_width="129dp"
-        android:layout_height="42dp"
-        android:text="BMI"
+        android:id="@+id/btnCalculate"
+        android:layout_width="132dp"
+        android:layout_height="48dp"
+        android:text="@string/calculator"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
