--- a/app/src/main/res/layout/activity_bmi_calculator.xml
+++ b/app/src/main/res/layout/activity_bmi_calculator.xml
@@ -7,9 +7,13 @@
     tools:context=".bmiCalculator">
 
     <EditText
-        android:id="@+id/editTextNumber3"
+        android:id="@+id/etFirstNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="Enter first number"
         android:inputType="number"
@@ -19,9 +23,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNumber4"
+        android:id="@+id/etSecondNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="Enter second number"
         android:inputType="number"
@@ -52,6 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:text="+"
+        app:layout_constraintBottom_toBottomOf="@+id/btnMinus"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="@+id/btnMinus" />
 
@@ -59,30 +68,33 @@
         android:id="@+id/btnMinus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="60dp"
         android:text="-"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        tools:layout_editor_absoluteY="323dp" />
+        app:layout_constraintTop_toBottomOf="@+id/etSecondNumber" />
 
     <Button
-        android:id="@+id/btnDivide"
+        android:id="@+id/btnMultiply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:text="/"
+        android:text="x"
+        app:layout_constraintBottom_toBottomOf="@+id/btnModulus"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        tools:layout_editor_absoluteY="426dp" />
+        app:layout_constraintTop_toTopOf="@+id/btnModulus" />
 
     <Button
         android:id="@+id/btnModulus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="80dp"
         android:background="#FF5722"
         android:backgroundTint="#9844A6"
         android:text="%"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        tools:layout_editor_absoluteY="433dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -91,14 +103,16 @@
         android:background="#00000000"
         android:backgroundTint="#CE57E3"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.47" />
 
-    <Button
-        android:id="@+id/button6"
+    <TextView
+        android:id="@+id/tvResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Button"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="24dp"
+        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
